# KerrP2P

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindGMP.cmake
examples/: NumericRay.wl  cpp_tutorial_basic.cpp  cpp_tutorial_sweep.cpp  tutorial_float128or256.ipynb  tutorial_float64.ipynb  tutorial_float64_sweep.ipynb  tutorial_geodesic_and_image.nb
scripts/: release.py
src/: Broyden.h  Common.h  Elliptic.h  Forward.h  ForwardRayTracing.h  GIntegral.h  IIntegral2.h  IIntegral3.h  Integral.h  Main.cpp  NelderMead.h  ObjectPool.h  Pybind.cpp  Utils.h  forward.cpp  forward.h  main.cpp
src/optim/: broyden_df.hpp  optim.hpp
src/optim/BaseMatrixOps/: BaseMatrixOps.hpp
src/optim/BaseMatrixOps/core/: abs.hpp  abs_max.hpp  access.hpp  accu.hpp  array_add.hpp  array_div.hpp  array_mult.hpp  as_scalar.hpp  bmo_core.hpp  cholesky.hpp  constant.hpp  cos.hpp  cout.hpp  diagmat.hpp  diagvec.hpp  dot.hpp  endl.hpp  eval.hpp  exp.hpp  eye.hpp  hadamard.hpp  inv.hpp  is_finite.hpp  log.hpp  log_det.hpp  max.hpp  min.hpp  ncol.hpp  norm.hpp  ones.hpp  pow.hpp  quad_form.hpp  randi.hpp  randn.hpp  randu.hpp  set_size.hpp  set_values.hpp  size.hpp  solve.hpp  sort.hpp  (+5 more)
src/optim/BaseMatrixOps/extra/: bmo_extra.hpp  cube_type.hpp  get_sort_index.hpp  index_min.hpp  reset_negative_values.hpp  tesseract_type.hpp  unit_vec.hpp
src/optim/BaseMatrixOps/misc/: bmo_options.hpp  misc_math.hpp
src/optim/BaseMatrixOps/stats/: bmo_stats.hpp  rind.hpp  rnorm.hpp  runif.hpp
src/optim/constrained/: sumt.hpp
src/optim/line_search/: more_thuente.hpp
src/optim/misc/: error_reporting.ipp  optim_misc.hpp  optim_options.hpp  optim_structs.hpp  optim_trace.hpp
src/optim/unconstrained/: bfgs.hpp  cg.hpp  de.hpp  de_prmm.hpp  gd.hpp  lbfgs.hpp  newton.hpp  nm.hpp  pso.hpp  pso_dv.hpp
src/optim/zeros/: broyden.hpp  broyden_df.hpp  optim_zeros.hpp
tests/: EllipticTest.cpp  Geodesic.jl  Main.cpp  Test.cpp  TestData.cpp  TestData.h  test.cpp
tests/data/: TestData.cpp  case1.json  case2.json  case3.json  test_data.cpp  test_data.h
